# minishell

./: .gitmodules  2  CMakeLists.txt  Makefile  README.md  a.out  echo.c  env.c  export.c  ft_binary.c  ft_builtin_utils.c  ft_builtins.c  ft_builtins_utils.c  ft_echo.c  ft_init.c  ft_redirs.c  ft_split.c  get_next_line.c  get_next_line_utils.c  lib_func.c  libft.c  main.c  mini.h  mini.h.gch  minishell  minishell.h  parser.c  parser_quotes.c  signals.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
function/: cd.c  pwd.c
minishell-parser_exp 3/: CMakeLists.txt  a.out  env.c  env_utils.c  export.c  get_next_line.c  libft.c  main.c  mini.h  mini.h.gch  parser.c  parser_first_s.c  parser_quotes.c  signals.c
minishell-parser_exp 3/function/: ft_unset.c
minishell-parser_exp 3/parser/: parser.c
minishell-parser_exp 3/work_with_list/: free_l.c
parser/: parser_first_s.c  parser_quotes.c
